--- a/4_jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/4_jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -992,7 +992,7 @@
     }
    ],
    "source": [
-    "%sql Select Landing_Outcomes, count(*) from SPACEXTBL where Date between '2010-06-04' AND '2017-03-20' group by Landing_Outcomes ORDER BY Date DESC"
+    "%sql Select Landing_Outcome, count(*) from SPACEXTBL where Date between '2010-06-04' AND '2017-03-20' group by Landing_Outcome ORDER BY Date DESC"
    ]
   },
   {
